@@ -56,6 +56,8 @@
 
   FIXES
 
+    - Precompiled headers on Windows no longer break when used with
+      variant dirs containing spaces.
     - Delete can now delete symlinks to directories and broken symlinks
     - CPPDEFINES containing dictionaries now work better.
     - A problem with using implicit-cache and removing dependencies on
